<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StagePlay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="resume">Quick Resume</string>
    <string name="allplays">All Plays</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="download">Add Books</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
	<string name="btn_details_label">Details</string>
	<string name="btn_play_label">Play</string>
	<string name="about_app_desc">StagePlay is an app that enables users to read and enjoy dramas/scripts by adding a visual dimension to them, hoping to provide greater immersion and an overall fun experience</string>
	<string name="about_app_version">Version 1.0</string>
	<string name="importer_load_button_text">Load from ZIP File</string>
	<string name="importer_ok_button_text">Back</string>
	<string name="playdetails_row_btnplay_text">Play</string>
	<string name="playdetails_row_btnresume_text">Resume</string>
	<string name="playdetails_row_btndetails_text">Details</string>
	<string name="playdetails_row_btndelete_text">Delete</string>
	<string name="welcome_text">Welcome\n\nTo\n\nStagePlay</string>
	<string name="watch_btnprev_text">Previous</string>
	<string name="watch_btnplay_text">Play</string>
	<string name="watch_btnnext_text">Next</string>
	<string name="current_library_items">"Library Items: "</string>
	

    <string name="menu_settings">Settings</string>
    <string name="slideshow_settings">Slideshow settings</string>
    <string name="other_settings">Other settings</string>
    <string name="pref_night_mode">Night mode</string>
    <string name="pref_slideshow">Slideshow mode</string>
    <string name="pref_slideshow_on">On</string>
    <string name="pref_slideshow_off">Off</string>
    <string name="pref_transition_time">Transition time</string>
    <string name="pref_transition_time_summary">Set the slideshow transition time</string>
</resources>